# HFECharacterTool

./: .gitattributes  .gitignore  README.en.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: dependencies.md  用户图文教程.md
scripts/: build_windows.ps1
src/hfe_character_tool/: __init__.py  __main__.py  assets.py  export.py  gui.py  gui_presenter.py  hfworkshop_catalog.py  logging_report.py  models.py  patching.py  projects.py  randomizer.py  runtime.py  swf_binary_symbol_patch.py  swf_bytearray_class_clone_patch.py  swf_bytearray_class_patch.py  swf_data_extract.py  swf_experience_binding_patch.py  swf_global_metadata_patch.py  swf_global_patch.py  swf_loadall_patch.py  swf_probe.py  swf_registry_entry_patch.py  swf_roundtrip.py  swf_select_char_panel_patch.py  target_cache.py  templates.py  tools.py  validation.py
tests/: test_assets.py  test_assets_logging_tools_export.py  test_gui_presenter.py  test_gui_target_catalog.py  test_gui_workspace.py  test_hfworkshop_catalog.py  test_patching.py  test_projects_templates_validation.py  test_randomizer.py  test_runtime.py  test_swf_binary_symbol_patch.py  test_swf_bytearray_class_clone_patch.py  test_swf_bytearray_class_patch.py  test_swf_experience_binding_patch.py  test_swf_global_metadata_patch.py  test_swf_global_patch.py  test_swf_loadall_patch.py  test_swf_probe.py  test_swf_registry_entry_patch.py  test_swf_roundtrip.py  test_swf_select_char_panel_patch.py  test_target_cache.py  test_tools.py
