[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hfe-character-tool"
version = "0.1.0"
description = "Hero Fighter custom character helper MVP"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.5",
]
package = [
  "pyinstaller>=6,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.8"
strict = true
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["output/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
